--- a/README.Rmd
+++ b/README.Rmd
@@ -13,8 +13,7 @@
 
 To solve this problem, create a standlone script that can install its own dependencies and then install a required set of packages:
 
-
-```r
+```{r}
 conan::conan(
   "script",
   c("cpp11",
@@ -25,20 +24,9 @@ conan::conan(
 
 That will create a file like:
 
-```r
-#!/usr/bin/env Rscript
-cran_rcloud <- "https://cloud.r-project.org"
-`%||%` <- function (x, y)
-{
-    if (is.null(x))
-        y
-[... skip ...]
-.packages <- c("cpp11", "dust", "mrc-ide/mcstate@some-feature")
-.repos <- c("https://ncov-ic.github.io/drat", CRAN = "https://cloud.r-project.org"
-)
-.policy <- "upgrade"
-.lib <- .dat$lib
-conan_install(.lib, .packages, policy = .policy, repos = .repos)
+```{r, results = "asis", echo = FALSE}
+txt <- readLines("script")
+writeLines(c("```r", head(txt), "[... skip ...]", tail(txt), "```"))
 ```
 
 Then this script can be run from the command line:
@@ -49,7 +37,9 @@ Then this script can be run from the command line:
 
 which will create a library at path `lib`
 
-
+```{r, include = FALSE}
+unlink("script")
+```
 
 ## Dependency resolution
 
